apps/general/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-cloudflare
  namespace: authentik
spec:
  ingressClassName: cloudflare
  rules:
    - host: photos.${DOMAIN_0}
      http:
        paths:
          - backend:
              service:
                name: immich
                port:
                  number: 10323
            path: /
            pathType: Prefix
